# quant-pricing-engine

./: .gitattributes  .gitignore  Makefile  README.md  ROADMAP.md  pyproject.toml
ci/: Jenkinsfile
docs/: architecture.md  codex_workflow.md  project_conventions.md  runbook.md
docs/adr/: 0001-repo-structure.md
infra/terraform/: README.md
infra/terraform/envs/dev/: docker-compose.yaml  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh.tftpl  variables.tf  versions.tf
scripts/: bootstrap.sh  validate.sh
src/quant_pricing_engine/: __init__.py
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
tests/: test_package.py
